# arteus-council

./: .dockerignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.leads.yml  docker-compose.yml  pyproject.toml  start.sh
backend/: auth.py  config.py  council.py  firecrawl.py  gigachat_adapter.py  leads_storage.py  llm.py  main.py  openrouter.py  storage.py  yandex_adapter.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  api.js  i18n.js  index.css
frontend/src/components/: ChatInterface.css  ChatInterface.jsx  DemosceneEasterEgg.css  DemosceneEasterEgg.jsx  LanguageSwitcher.css  LanguageSwitcher.jsx  LeadsLoginInterface.jsx  LoginInterface.css  LoginInterface.jsx  PersonalizationSettings.css  PersonalizationSettings.jsx  Sidebar.css  Sidebar.jsx  Stage1.css  Stage1.jsx  Stage2.css  Stage2.jsx  Stage3.css  Stage3.jsx
frontend/src/utils/: exportMarkdown.js  exportPdf.js
